# moosee

./: pyproject.toml
moosee/: __main__.py  config.py
